--- a/INSTALL
+++ b/INSTALL
@@ -80,7 +80,8 @@ sure of what you are doing, it is best to leave this alone.
 --with-egd-pool=/some/file allows you to enable Entropy Gathering
 Daemon support and to specify a EGD pool socket. You will need to
 use this if your Unix does not support the /dev/urandom device (or
-similar).
+similar). The file argument refers to the EGD pool file, not the 
+EGD program itself. Please refer to the EGD documentation.
 
 --with-kerberos4 will enable Kerberos IV support. You will need to
 have the Kerberos libraries and header files installed for this to
@@ -116,6 +117,9 @@ To generate a host key, issue the following command: (replacing
 Replacing /etc/ssh with the correct path to the configuration directory.
 (${prefix}/etc or whatever you specified with --sysconfdir during 
 configuration)
+
+If you have configured OpenSSH with EGD support, ensure that EGD is
+running and has collected some Entropy.
 
 For more information on configuration, please refer to the manual pages 
 for sshd, ssh and ssh-agent.
