- Fix DISABLE_SHADOW support  - Allow MD5 passwords even if shadow passwords are disabled

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
  - OpenBSD CVS update:
    - [sshconnect.c]
    say "REMOTE HOST IDENTIFICATION HAS CHANGED"
+ - Fix DISABLE_SHADOW support
+ - Allow MD5 passwords even if shadow passwords are disabled
 
 19991218
  - Redhat init script patch from Chun-Chung Chen 
