- Fixed implicit '.' in default path, report from Jim Knoble    <jmknoble@pobox.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,9 @@
    - [ssh-keygen.1 ssh.1]
      remove ref to .ssh/random_seed, mention .ssh/environment in 
      .Sh FILES, too
+ - Released 1.2.1pre21
+ - Fixed implicit '.' in default path, report from Jim Knoble 
+   <jmknoble@pobox.com>
 
 19991225
  - More fixes from Andre Lucas <andre.lucas@dial.pipex.com>
