- Added --with-default-path to specify custom path for server  - Removed #ifdef trickery from acconfig.h into defines.h

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
  - Automatically correct paths in manpages and configuration files. Patch
    and script from Andre Lucas <andre.lucas@dial.pipex.com>
  - Removed credits from README to CREDITS file, updated.
+ - Added --with-default-path to specify custom path for server
+ - Removed #ifdef trickery from acconfig.h into defines.h
 
 19991226
  - Enabled utmpx support by default for Solaris
