- Use last few chars of tty line as ut_id

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
  - PAM bugfix. PermitEmptyPassword was being ignored.
  - Fixed PAM config files to allow empty passwords if server does.
  - Explained spurious PAM auth warning workaround in UPGRADING
+ - Use last few chars of tty line as ut_id
 
 19991226
  - Enabled utmpx support by default for Solaris
