--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
  - NetBSD login.c compile fix from David Rankin 
   <drankin@bohemians.lexington.ky.us>
  - Fully set ut_tv if present in utmp or utmpx
+ - Portability fixes for Irix 5.3 (now compiles OK!)
+ - autoconf and other misc cleanups
 
 19991227
  - Automatically correct paths in manpages and configuration files. Patch
