--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
  - Fix --with-default-path option.
  - Autodetect perl, patch from David Rankin 
    <drankin@bohemians.lexington.ky.us>
+ - Print whether OpenSSH was compiled with RSARef, patch from 
+   Nalin Dahyabhai <nalin@thermo.stat.ncsu.edu>
 
 19991228
  - Replacement for getpagesize() for systems which lack it
