- Detect missing size_t and typedef it.

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@
    Nalin Dahyabhai <nalin@thermo.stat.ncsu.edu>
  - Calls to pam_setcred, patch from Nalin Dahyabhai 
    <nalin@thermo.stat.ncsu.edu>
+ - Detect missing size_t and typedef it.
 
 19991228
  - Replacement for getpagesize() for systems which lack it
