--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,7 @@
  - autoconf and other misc cleanups
  - Merged AIX patch from Darren Hall <dhall@virage.org>
  - Cleaned up defines.h
+ - Released 1.2.1pre22
 
 19991227
  - Automatically correct paths in manpages and configuration files. Patch
