--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+19991230
+ - OpenBSD CVS updates:
+   - [auth-passwd.c]
+     check for NULL 1st
+
 19991229
  - Applied another NetBSD portability patch from David Rankin 
    <drankin@bohemians.lexington.ky.us>
