- Prevent typedefs from being compiled more than once. Report from    Marc G. Fournier <marc.fournier@acadiau.ca>

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
    Fournier <marc.fournier@acadiau.ca>
  - Fix occasional crash on LinuxPPC. Patch from Franz Sirl
    <Franz.Sirl-kernel@lauterbach.com>
+ - Prevent typedefs from being compiled more than once. Report from 
+   Marc G. Fournier <marc.fournier@acadiau.ca>
 
 19991230
  - OpenBSD CVS updates:
