- Add explicit make rules for files proccessed by fixpaths.  - Fix "make install" in RPM spec files. Report from Tenkou N. Hattori    <tnh@kondara.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,13 @@
+20000103
+ - Add explicit make rules for files proccessed by fixpaths.
+ - Fix "make install" in RPM spec files. Report from Tenkou N. Hattori  
+   <tnh@kondara.org>
+
 20000102
  - Prevent multiple inclusion of config.h and defines.h. Suggested
    by Andre Lucas <andre.lucas@dial.pipex.com>
  - Properly clean up on exit of ssh-agent. Patch from Dean Gaudet
    <dgaudet@arctic.org>
- - Run fixpaths before install. (Andre Lucas)
 
 19991231
  - Fix password support on systems with a mixture of shadowed and 
